# gammapy_SyLC

./: .gitignore  LICENSE  README.md  __init__.py  paper.bib  pyproject.toml  setup.py
.github/workflows/: draft-pdf.yml
gammapy_SyLC/: __init__.py  distributions.py  fitting.py  functions.py  helpers.py  multiwavelength.py  simulators.py  test.py  to_gammapy.py
paper/: paper.bib  paper.md
